# Verifiable-AI-Output-Ledger

./: .dockerignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  MAINTAINERS.md  Makefile  README.md  funding.json  go.mod  go.sum  roadmap.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: audit_finding.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  ghcr-smoke.yml  release.yml  scorecard.yml
cmd/vaol-proxy/: main.go
cmd/vaol-server/: main.go  main_test.go
deploy/docker/: Dockerfile.proxy  Dockerfile.server  docker-compose.yml
docs/: api-reference.md  architecture.md  auditor-guide.md  compliance-operations.md  control-matrix.md  deployment-production-profile.md  dr-playbook.md  external-audit-readiness.md  ha-sequencing-model.md  multi-region-reference.md  threat-model.md  v1-compatibility-contract.md
docs/audit/: contract-signoff-2026-03-06.md  control-matrix.md  finding-intake-playbook.md  handoff-checklist.md  handoff-receipt-2026-03-06.md  multi-auditor-outreach-tracker.md  redacted-package-spec.md  remediation-report-template.md  rfp-shortlist.md  sow.md
scripts/: build_audit_pack.sh  check_startup_restore_bench.sh  check_workflow_pins.sh  create_audit_finding_issue.sh  demo_auditor.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: conftest.py  test_anthropic_wrapper.py  test_client.py  test_litellm_wrapper.py  test_verify.py  test_wrapper.py
sdk/python/vaol/: __init__.py  anthropic_wrapper.py  client.py  litellm_wrapper.py  verify.py
web/: embed.go
(+111 files in other folders)
